src/snapshots/eww_config__test-10.snap
---
source: src/lib.rs
expression: "p.parse(r#\"(test \"h\\\"i\")\"#)"

---
Ok(
    List<0..13>(
        [
            Symbol<1..5>(test),
            Str<6..12>(h\"i),
        ],
    ),
)
