src/snapshots/eww_config__test-11.snap
---
source: src/lib.rs
expression: "p.parse(r#\"(test \" hi \")\"#)"

---
Ok(
    List<0..13>(
        [
            Symbol<1..5>(test),
            Str<6..12>( hi ),
        ],
    ),
)
