src/snapshots/eww_config__test-12.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(r#\"(test \"h\\\"i\")\"#))"

---
Ok(
    List<0..13>(
        [
            Symbol<1..5>(test),
            Value<6..12>(h\"i),
        ],
    ),
)
