src/snapshots/eww_config__test-13.snap
---
source: src/main.rs
expression: "p.parse(r#\"{:key value 12 \"hi\" (test) (1 2 3)}\"#)"

---
Ok(
    Table(
        0..35,
        [
            (
                Keyword(
                    1..5,
                    ":key",
                ),
                Symbol(
                    6..11,
                    "value",
                ),
            ),
            (
                Number(
                    12..14,
                    12,
                ),
                Str(
                    15..19,
                    "hi",
                ),
            ),
            (
                List(
                    20..26,
                    [
                        Symbol(
                            21..25,
                            "test",
                        ),
                    ],
                ),
                List(
                    27..34,
                    [
                        Number(
                            28..29,
                            1,
                        ),
                        Number(
                            30..31,
                            2,
                        ),
                        Number(
                            32..33,
                            3,
                        ),
                    ],
                ),
            ),
        ],
    ),
)
