src/snapshots/eww_config__test-14.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(\"(+ (1 2 (* 2 5)))\"))"

---
Ok(
    List<0..17>(
        [
            Symbol<1..2>(+),
            List<3..16>(
                [
                    Value<4..5>(1),
                    Value<6..7>(2),
                    List<8..15>(
                        [
                            Symbol<9..10>(*),
                            Value<11..12>(2),
                            Value<13..14>(5),
                        ],
                    ),
                ],
            ),
        ],
    ),
)
