src/snapshots/eww_config__test-15.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(r#\"; test\"#))"

---
Ok(
    Comment<0..6>,
)
