src/snapshots/eww_config__test-16.snap
---
source: src/lib.rs
expression: "p.parse(\"\\\"h\\\\\\\"i\\\"\")"

---
Ok(
    Str<0..6>(h\"i),
)
