src/snapshots/eww_config__test-17.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(\"\\\"h\\\\\\\"i\\\"\"))"

---
Ok(
    Value<0..6>(h\"i),
)
