src/snapshots/eww_config__test-3.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(\"1.2\"))"

---
Ok(
    Value<0..3>(1.2),
)
