src/snapshots/eww_config__test-4.snap
---
source: src/lib.rs
expression: "p.parse(\"(1 :foo 1)\")"

---
Ok(
    List<0..10>(
        [
            Number<1..2>(1),
            Number<3..7>(:foo),
            Number<8..9>(1),
        ],
    ),
)
