src/snapshots/eww_config__test-5.snap
---
source: src/lib.rs
expression: "p.parse(0, lexer::Lexer::new(\"(1 2)\"))"

---
Ok(
    List<0..5>(
        [
            Value<1..2>(1),
            Value<3..4>(2),
        ],
    ),
)
